--- a/src/pages/slider/slider.html
+++ b/src/pages/slider/slider.html
@@ -1,18 +1,20 @@
-<!--
-  Generated template for the SliderPage page.
+<ion-content>
+  <ion-slide>
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+    <ion-slide>
+      <h1>Welcome to Slider 1</h1>
+      <p>This is page 1</p>
+    </ion-slide>
 
-  <ion-navbar>
-    <ion-title>slider</ion-title>
-  </ion-navbar>
+    <ion-slide>
+      <h1>Welcome to Slider 1</h1>
+      <p>This is page 1</p>
+    </ion-slide>
 
-</ion-header>
+    <ion-slide>
+      <h1>Welcome to Slider 1</h1>
+      <p>This is page 1</p>
+    </ion-slide>
 
-
-<ion-content padding>
-
+  </ion-slide>
 </ion-content>
