--- a/src/pages/slider/slider.html
+++ b/src/pages/slider/slider.html
@@ -1,20 +1,18 @@
 <ion-content>
-  <ion-slide>
-
+  <ion-slides pager = "true">
     <ion-slide>
       <h1>Welcome to Slider 1</h1>
       <p>This is page 1</p>
     </ion-slide>
 
     <ion-slide>
-      <h1>Welcome to Slider 1</h1>
-      <p>This is page 1</p>
-    </ion-slide>
+        <h1>Welcome to Slider 2</h1>
+        <p>This is page 2</p>
+      </ion-slide>
 
-    <ion-slide>
-      <h1>Welcome to Slider 1</h1>
-      <p>This is page 1</p>
-    </ion-slide>
-
-  </ion-slide>
+      <ion-slide>
+          <h1>Welcome to Slider 3</h1>
+          <p>This is page 3</p>
+        </ion-slide>
+  </ion-slides>
 </ion-content>
