Lazy Loading changes

--- a/src/pages/lost-password/lost-password.html
+++ b/src/pages/lost-password/lost-password.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the SliderPage page.
+  Generated template for the LostPasswordPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>slider</ion-title>
+    <ion-title>lostPassword</ion-title>
   </ion-navbar>
 
 </ion-header>
