--- a/src/pages/slider/slider.html
+++ b/src/pages/slider/slider.html
@@ -1,18 +1,18 @@
-<!--
-  Generated template for the SliderPage page.
+<ion-content>
+  <ion-slides pager="true">
+    <ion-slide style="background-color:#4E7AC7;color:white">
+      <h1>Welcome to Slide 1</h1>
+      <p>This is page 1</p>
+    </ion-slide>
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+    <ion-slide style="background-color:#35478C;color:white">
+      <h1>Welcome to Slide 2</h1>
+      <p>This is page 2</p>
+    </ion-slide>
 
-  <ion-navbar>
-    <ion-title>slider</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
+    <ion-slide style="background-color:#292975;color:white">
+      <h1>Welcome to Slide 3</h1>
+      <p>This is page 3</p>
+     </ion-slide>
+  </ion-slides>
 </ion-content>
