Slider Lets go!!

--- a/src/pages/slider/slider.html
+++ b/src/pages/slider/slider.html
@@ -69,7 +69,7 @@
         <div class="whiteLine"></div>
 
         <!-- Buttons -->
-        <button class="getStartedButton">GET STARTED</button>
+        <button class="getStartedButton">LET'S GO</button>
      </ion-slide>
   </ion-slides>
 </ion-content>
