--- a/src/pages/slider/slider.html
+++ b/src/pages/slider/slider.html
@@ -54,7 +54,7 @@
         
         <div class="whiteLine"></div>
 
-        <button id="letsGoButton">LET'S GO</button>
+        <button id="letsGoButton" (click)="navigateToLoginPage()">LET'S GO</button>
      </ion-slide>
   </ion-slides>
 </ion-content>
