Login Page Update v2

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,6 +1,6 @@
 <ion-content id="body">
 
-        <ion-img class="display" src="assets/imgs/BOSlogo/Logo.png"></ion-img>
+        <ion-img class="displayLogo" src="assets/imgs/BOSlogo/Logo.png"></ion-img>
 
     <form #loginForm="ngForm" (ngSubmit)="login()" autocomplete="off">
         <ion-row>
@@ -27,7 +27,6 @@
         </ion-row>
       </form>
 
-      <div>
-
-      </div>
+      <div class="div-btm"></div>
+      <ion-img class="instruction" src="assets/imgs/instruction/instruction1.png"></ion-img>
 </ion-content>
