--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,23 +1,22 @@
 <ion-content id="body">
-
         <ion-img class="displayLogo" src="assets/imgs/BOSlogo/Logo.png"></ion-img>
-
     <form>
-        <ion-row>
-          <ion-col>
-            <ion-list inset>
-              <ion-item class="input-color">
-                <ion-label class="icon-color"><ion-icon ios="ios-mail" md="md-mail" style="zoom:1.2;"></ion-icon></ion-label>
-                <ion-input placeholder="Email Address" name="username" id="loginField" type="text" ></ion-input>
-              </ion-item>
-              <ion-item class="input-color">
-                  <ion-label class="icon-color"><ion-icon ios="ios-key" md="md-key" style="zoom:1.2;"></ion-icon></ion-label>
-                <ion-input placeholder="Password" name="password" id="passwordField" type="password" ></ion-input>
-              </ion-item>
-            </ion-list>
-          </ion-col>
-        </ion-row>
-
+      <div class="center1"> 
+          <ion-row>
+              <ion-col>
+                <ion-list inset class="ilist">
+                  <ion-item class="input-color">
+                    <ion-label class="icon-color"><ion-icon ios="ios-mail" md="md-mail" style="zoom:1.2;"></ion-icon></ion-label>
+                    <ion-input placeholder="Email Address" name="username" id="loginField" type="text" ></ion-input>
+                  </ion-item>
+                  <ion-item class="input-color">
+                      <ion-label class="icon-color"><ion-icon ios="ios-key" md="md-key" style="zoom:1.2;"></ion-icon></ion-label>
+                    <ion-input placeholder="Password" name="password" id="passwordField" type="password" ></ion-input>
+                  </ion-item>
+                </ion-list>
+              </ion-col>
+            </ion-row>
+      </div>
         <ion-row>
           <ion-col>
             <div id="display-btn">
