--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -13,6 +13,8 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
 
+    <div class="div-btm"></div>
+    <ion-img class="instruction" src="assets/imgs/instruction/instruction2.png"></ion-img>
 </ion-content>
