Changes in Login and Register page

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,11 +7,11 @@
                 <ion-list inset class="ilist">
                   <ion-item class="input-color">
                     <ion-label class="icon-color"><ion-icon ios="ios-mail" md="md-mail" style="zoom:1.2;"></ion-icon></ion-label>
-                    <ion-input placeholder="Email Address" name="username" id="loginField" type="text" ></ion-input>
+                    <ion-input class="text-input" placeholder="Email Address" name="username" id="loginField" type="text" ></ion-input>
                   </ion-item>
                   <ion-item class="input-color">
                       <ion-label class="icon-color"><ion-icon ios="ios-key" md="md-key" style="zoom:1.2;"></ion-icon></ion-label>
-                    <ion-input placeholder="Password" name="password" id="passwordField" type="password" ></ion-input>
+                    <ion-input class="text-input" placeholder="Password" name="password" id="passwordField" type="password" ></ion-input>
                   </ion-item>
                 </ion-list>
               </ion-col>
