--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -1,19 +1,49 @@
-<!--
-  Generated template for the RegisterPage page.
+<ion-content id="body">
+  <form>
+      <div class="center"> 
+          <ion-row>
+              <ion-col>
+                <ion-list >
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+                  <div class="labelBoxColor">
+                    <ion-label class="labelText">Email Address*</ion-label>
+                  </div>
+                  <ion-item class="input-color">
+                    <ion-input class="text-input" placeholder="Enter Email Address" name="username" id="loginField" type="text" ></ion-input>
+                  </ion-item>
 
-  <ion-navbar>
-    <ion-title>register</ion-title>
-  </ion-navbar>
+                  <div class="labelBoxColor">
+                    <ion-label class="labelText">Password*</ion-label>
+                  </div>
+                  <ion-item class="input-color">
+                      <ion-input placeholder="Enter Password (6-12 Characters)" name="password" id="passwordField" type="password" ></ion-input>
+                  </ion-item>
 
-</ion-header>
+                  <div class="labelBoxColor">
+                    <ion-label class="labelText">RE-TYPE Password*</ion-label>
+                  </div>
+                  <ion-item class="input-color">
+                    <ion-input placeholder="Enter Password (6-12 Characters)" name="password" id="passwordField" type="password" ></ion-input>
+                  </ion-item>
 
+                  <p class="agreementCenter">By Signing up, I agree to the <b style="color:#615E5E;">Terms of USE</b> <br/> and <b style="color:#615E5E;">Privacy USE</b> of B.O.S</p>
+                  <div class="whiteLine"></div>
+                </ion-list>
+                
+              </ion-col>
+            </ion-row>
+      </div>
 
-<ion-content>
+      <ion-row>
+          <ion-col>
+            <div id="display-btn">
+                <button ion-button id="register-btn">REGISTER</button>
+                <button ion-button id="back-btn" (click)="navigateToLoginPage()">BACK</button>
+            </div>
+          </ion-col>
+        </ion-row>
+      </form>
+
 
     <div class="div-btm"></div>
     <ion-img class="instruction" src="assets/imgs/instruction/instruction2.png"></ion-img>
