Login + Register + LostPassword Complete Update

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -27,7 +27,7 @@
         </ion-row>
       </form>
       <div class="center">
-        <button class="lostPassword-btn">Lost Password?</button>
+        <button class="lostPassword-btn" (click)="navigateToLostPasswordPage()">Lost Password?</button>
       </div>
       
       <div class="div-btm"></div>
