--- a/src/pages/lost-password/lost-password.html
+++ b/src/pages/lost-password/lost-password.html
@@ -1,18 +1,23 @@
-<!--
-  Generated template for the LostPasswordPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>lostPassword</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
-</ion-content>
+<ion-content id="body">
+    <ion-img class="displayLogo" src="assets/imgs/BOSlogo/LogoV2.png"></ion-img>
+    <p class="textDescription"><b style="color:#575454;">Forget Password?</b><br/>Enter your email below to your<br/>password reset instructions</p>
+    <form>
+      <div class="center1"> 
+          <ion-row>
+              <ion-col>
+                <ion-list class="ilist">
+                  <ion-item class="input-color">
+                    <ion-input class="text-input" placeholder="Please enter your email address" name="username" id="loginField" type="text" ></ion-input>
+                  </ion-item>
+                </ion-list>
+              </ion-col>
+            </ion-row>
+      </div>
+            <div id="display-btn">
+                 <button ion-button id="send-btn">SEND</button>
+                 <button ion-button id="back-btn" (click)="navigateToLoginPage()">BACK</button>
+            </div>
+      </form>
+    <div class="div-btm"></div>
+      <ion-img class="instruction" src="assets/imgs/instruction/instruction3.png"></ion-img>
+  </ion-content>
