--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,17 +1,17 @@
 <ion-content id="body">
         <ion-img class="displayLogo" src="assets/imgs/BOSlogo/Logo.png"></ion-img>
-    <form>
+    <form #loginForm="ngForm" autocomplete="off">
       <div class="center1"> 
           <ion-row>
               <ion-col>
                 <ion-list inset class="ilist">
                   <ion-item class="input-color">
                     <ion-label class="icon-color"><ion-icon ios="ios-mail" md="md-mail" style="zoom:1.2;"></ion-icon></ion-label>
-                    <ion-input class="text-input" placeholder="Email Address" name="username" id="loginField" type="text" ></ion-input>
+                    <ion-input class="text-input" placeholder="Email Address" name="username" id="emailField" type="text" required [(ngModel)]="username" #email ></ion-input>
                   </ion-item>
                   <ion-item class="input-color">
                       <ion-label class="icon-color"><ion-icon ios="ios-key" md="md-key" style="zoom:1.2;"></ion-icon></ion-label>
-                    <ion-input class="text-input" placeholder="Password" name="password" id="passwordField" type="password" ></ion-input>
+                    <ion-input class="text-input" placeholder="Password" name="password" id="passwordField" type="password" required [(ngModel)]="password"></ion-input>
                   </ion-item>
                 </ion-list>
               </ion-col>
@@ -21,7 +21,7 @@
           <ion-col>
             <div id="display-btn">
                 <button ion-button id="signup-btn" (click)="navigateToRegisterPage()">SIGN UP</button>
-                <button ion-button id="login-btn" >LOG IN</button>
+                <button ion-button id="login-btn" (click)="login()" [disabled]="!loginForm.form.valid">LOG IN</button>
             </div>
           </ion-col>
         </ion-row>
