--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -1,5 +1,5 @@
 <ion-content id="body">
-  <form>
+  <form #registerForm="ngForm" autocomplete="off">
       <div class="center"> 
           <ion-row>
               <ion-col>
@@ -9,21 +9,21 @@
                     <ion-label class="labelText">Email Address*</ion-label>
                   </div>
                   <ion-item class="input-color">
-                    <ion-input class="text-input" placeholder="Enter Email Address" name="username" id="loginField" type="text" ></ion-input>
+                    <ion-input class="text-input" placeholder="Enter Email Address" name="username" id="loginField" type="text" required [(ngModel)]="user.email" #email></ion-input>
                   </ion-item>
 
                   <div class="labelBoxColor">
                     <ion-label class="labelText">Password*</ion-label>
                   </div>
                   <ion-item class="input-color">
-                      <ion-input placeholder="Enter Password (6-12 Characters)" name="password" id="passwordField" type="password" ></ion-input>
+                      <ion-input placeholder="Enter Password (6-12 Characters)" name="password" id="passwordField" type="password" required [(ngModel)]="user.password"></ion-input>
                   </ion-item>
 
                   <div class="labelBoxColor">
                     <ion-label class="labelText">RE-TYPE Password*</ion-label>
                   </div>
                   <ion-item class="input-color">
-                    <ion-input placeholder="Enter Password (6-12 Characters)" name="password" id="passwordField" type="password" ></ion-input>
+                    <ion-input placeholder="Enter Password (6-12 Characters)" name="password" id="passwordField" type="password" required [(ngModel)]="user.password2"></ion-input>
                   </ion-item>
 
                   <p class="agreementCenter">By Signing up, I agree to the <b style="color:#615E5E;">Terms of USE</b> <br/> and <b style="color:#615E5E;">Privacy USE</b> of B.O.S</p>
@@ -37,7 +37,7 @@
       <ion-row>
           <ion-col>
             <div id="display-btn">
-                <button ion-button id="register-btn">REGISTER</button>
+                <button ion-button id="register-btn" (click)="register(user)" [disabled]="!registerForm.form.valid">REGISTER</button>
                 <button ion-button id="back-btn" (click)="navigateToLoginPage()">BACK</button>
             </div>
           </ion-col>
