Lost Password Retriever 100% complete

--- a/src/pages/lost-password/lost-password.html
+++ b/src/pages/lost-password/lost-password.html
@@ -1,20 +1,20 @@
 <ion-content id="body">
     <ion-img class="displayLogo" src="assets/imgs/BOSlogo/LogoV2.png"></ion-img>
     <p class="textDescription"><b style="color:#575454;">Forget Password?</b><br/>Enter your email below to your<br/>password reset instructions</p>
-    <form>
+    <form #lostPasswordForm="ngForm" [formGroup]="formgroup" autocomplete="off">
       <div class="center1"> 
           <ion-row>
               <ion-col>
                 <ion-list class="ilist">
                   <ion-item class="input-color">
-                    <ion-input class="text-input" placeholder="Please enter your email address" name="username" id="loginField" type="text" ></ion-input>
+                    <ion-input class="text-input" placeholder="Please enter your email address" formControlName="email" required [(ngModel)]="user.email" type="text" ></ion-input>
                   </ion-item>
                 </ion-list>
               </ion-col>
             </ion-row>
       </div>
             <div id="display-btn">
-                 <button ion-button id="send-btn">SEND</button>
+                 <button ion-button id="send-btn" (click)="lostPassword(email)" [disabled]="!lostPasswordForm.form.valid">SEND</button>
                  <button ion-button id="back-btn" (click)="navigateToLoginPage()">BACK</button>
             </div>
       </form>
