--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the HomePage page.
+  Generated template for the AccountPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,16 +7,10 @@
 <ion-header>
 
   <ion-navbar>
-
-    <ion-title>
-      Home
-    </ion-title>
-
-
+    <ion-title>account</ion-title>
   </ion-navbar>
 
 </ion-header>
-
 
 
 <ion-content padding>
