--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,14 +1,13 @@
 
 
 
-<ion-tabs selectedIndex = "4">
+<ion-tabs selectedIndex = "0">
 
-  <ion-tab [root]="tab1" tabTitle="Home" tabIcon="film"></ion-tab>
+  <ion-tab [root]="tab1" tabTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2" tabTitle="Categories" tabIcon="apps"></ion-tab>
   <ion-tab [root]="tab3" tabTitle="Cart" tabIcon="cart"></ion-tab>
   <ion-tab [root]="tab4" tabTitle="Account" tabIcon="person"></ion-tab>
-  <ion-tab [root]="tab5" class="hide"></ion-tab>
-  <ion-tab [root]="tab6" class="hide"></ion-tab>
+
  
  
  </ion-tabs>
