--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Account</ion-title>
+    <ion-title>ACCOUNT</ion-title>
   </ion-navbar>
 
 </ion-header>
