abit of updates

--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -20,7 +20,7 @@
           <i item-left><ion-icon ios="ios-basket" md="md-basket"></ion-icon></i>
       </button>
 
-      <button ion-item regular color="dark">
+      <button ion-item regular color="dark" (click)="navigateToSettingPage()">
           <ion-label>
               <p>Settings</p>
           </ion-label>  
