--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,18 +22,19 @@
   </ion-list>  
 </ion-header>
 
-<ion-content padding>
-    <ion-slides autoplay="5000" loop="true" speed="3000">
-        <ion-slide >
-          <img src="../../assets/imgs/ads/ads1.jpg" class="img">
-        </ion-slide>
-        <ion-slide >
-          <img src="../../assets/imgs/ads/ads2.jpg" class="img">
-        </ion-slide>
-        <ion-slide >
-          <img src="../../assets/imgs/ads/ads3.png" class="img">
-        </ion-slide>
+<ion-content>
+      <ion-slides autoplay="5000" loop="true" speed="2000">
+          <ion-slide >
+            <img src="../../assets/imgs/ads/ads1.jpg" class="img">
+          </ion-slide>
+          <ion-slide >
+            <img src="../../assets/imgs/ads/ads2.jpg" class="img">
+          </ion-slide>
+          <ion-slide >
+            <img src="../../assets/imgs/ads/ads3.png" class="img">
+          </ion-slide>
       </ion-slides>
+    
     
       <div padding>
         <ion-segment [(ngModel)]="segment">
