--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -72,7 +72,7 @@
         </ion-list> 
       </div> -->
       <div class="segment">Most Popular</div>
-      <div><ion-slides autoplay="5000" loop="true" speed="4000">
+      <div class="graydiv"><ion-slides autoplay="5000" loop="true" speed="4000">
           <ion-slide class="slide-small">
             <div>
             <img src="../../assets/imgs/categories/small1.png" class="small">
@@ -90,7 +90,7 @@
         </ion-slides></div>
       
       <div class="segment">Trending</div>
-      <div>    
+      <div class="graydiv">    
         <ion-slides autoplay="5000" loop="true" speed="4000">
           <ion-slide >
             <img src="../../assets/imgs/ads/ads1.jpg" class="small">
@@ -105,7 +105,7 @@
       </div>
       
       <div class="segment">New</div>
-         <div>    
+         <div class="graydiv">    
            <ion-slides autoplay="5000" loop="true" speed="4000">
             <ion-slide >
               <img src="../../assets/imgs/ads/ads1.jpg" class="small">
