--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the HomePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -15,7 +9,7 @@
 
   </ion-navbar>
 
-<ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
+<ion-searchbar (ionInput)="getItems($event)" id="searchbar"></ion-searchbar>
   <ion-list>
     <ion-item *ngFor="let item of items">
       {{ item }}
@@ -26,27 +20,27 @@
 <ion-content>
     <ion-slides autoplay="5000" loop="true" speed="3000">
         <ion-slide >
-          <img src="../../assets/imgs/ads/ads1.jpg" class="img">
+          <img src="../../assets/imgs/ads/ads1.jpg" class="img-ads">
         </ion-slide>
         <ion-slide >
-          <img src="../../assets/imgs/ads/ads2.jpg" class="img">
+          <img src="../../assets/imgs/ads/ads2.jpg" class="img-ads">
         </ion-slide>
         <ion-slide >
-          <img src="../../assets/imgs/ads/ads3.png" class="img">
+          <img src="../../assets/imgs/ads/ads3.png" class="img-ads">
         </ion-slide>
       </ion-slides>
 
       <div class="segment">Most Popular</div>
       <div class="graydiv"><ion-slides autoplay="5000" loop="true" speed="4000">
           <ion-slide class="slide-small">
-            <div>
+            <div class="segment-img">
             <img src="../../assets/imgs/categories/small1.png" class="small">
             <img src="../../assets/imgs/categories/small1.png" class="small">
             <img src="../../assets/imgs/categories/small1.png" class="small">
           </div>
           </ion-slide>
           <ion-slide class="slide-small">
-            <div>
+            <div class="segment-img">
               <img src="../../assets/imgs/categories/small1.png" class="small">
               <img src="../../assets/imgs/categories/small1.png" class="small">
               <img src="../../assets/imgs/categories/small1.png" class="small">
@@ -58,14 +52,14 @@
       <div class="graydiv">    
         <ion-slides autoplay="5000" loop="true" speed="4000">
           <ion-slide class="slide-small">
-            <div>
+            <div class="segment-img">
             <img src="../../assets/imgs/categories/small1.png" class="small">
             <img src="../../assets/imgs/categories/small1.png" class="small">
             <img src="../../assets/imgs/categories/small1.png" class="small">
           </div>
           </ion-slide>
           <ion-slide class="slide-small">
-            <div>
+            <div class="segment-img">
               <img src="../../assets/imgs/categories/small1.png" class="small">
               <img src="../../assets/imgs/categories/small1.png" class="small">
               <img src="../../assets/imgs/categories/small1.png" class="small">
@@ -78,14 +72,14 @@
          <div class="graydiv">    
            <ion-slides autoplay="5000" loop="true" speed="4000">
             <ion-slide class="slide-small">
-              <div>
+              <div class="segment-img">
               <img src="../../assets/imgs/categories/small1.png" class="small">
               <img src="../../assets/imgs/categories/small1.png" class="small">
               <img src="../../assets/imgs/categories/small1.png" class="small">
             </div>
             </ion-slide>
             <ion-slide class="slide-small">
-              <div>
+              <div class="segment-img">
                 <img src="../../assets/imgs/categories/small1.png" class="small">
                 <img src="../../assets/imgs/categories/small1.png" class="small">
                 <img src="../../assets/imgs/categories/small1.png" class="small">
