--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -20,6 +20,13 @@
           <i item-left ><ion-icon ios="ios-basket" md="md-basket"></ion-icon></i>
       </button>
 
+      <button ion-item regular (click)="navigateToSellItemPage()">
+        <ion-label>
+            <p class="textFont">Sell Item</p>
+        </ion-label>  
+      <i item-left><ion-icon ios="ios-cube" md="md-cube"></ion-icon></i>
+  </button>
+
       <button ion-item regular (click)="navigateToSettingPage()">
           <ion-label>
               <p class="textFont">Settings</p>
